test/sematic/resources/positive/basic_niltype.tig
let
    type a = {x: int, y: int}
    var val := a {x = 1, y = 2}
in
    if 2 then val else nil
end
